# inzi

./: .gitignore  flake.nix  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
src/: main.ts  style.css
src-tauri/: Cargo.toml  build.rs  config.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/lib/: Fwlib32.bas  Fwlib32.h  Fwlib64.lib
src-tauri/src/: bindings_linux.rs  cnc.rs  config.rs  fwlib.rs  gauge.rs  io.rs  lib.rs  logger.rs  main.rs
