[package]
name = "inzi_cnc_gauge"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "inzi_cnc_gauge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.101"
log = "0.4.29"
env_logger = "0.11.9"
hex = "0.4.3"
chrono = { version = "0.4.43", features = ["serde"] }
futures = "0.3.32"
tokio-util = { version = "0.7.18", features = ["codec"] }
bytes = "1.11.1"
tokio-stream = { version = "0.1.18", features = ["sync"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
